--- a/ExitTask.Presentation/ExitTask.Presentation.csproj
+++ b/ExitTask.Presentation/ExitTask.Presentation.csproj
@@ -135,12 +135,12 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\fonts\LICENSE.txt" />
+    <Content Include="Content\fonts\Material-Design-Icons.svg" />
     <Content Include="Content\Images\airplane2.png" />
     <Content Include="Content\jquery.validate.bootstrap.css" />
     <Content Include="Content\material.min.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="fonts\bootstrap-material-fonts\LICENSE.txt" />
-    <Content Include="fonts\bootstrap-material-fonts\Material-Design-Icons.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Areas\Admin\Views\web.config" />
@@ -159,6 +159,19 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Areas\Common\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Common\Views\Home\TourDetails.cshtml" />
+    <Content Include="Content\fonts\Material-Design-Icons.eot" />
+    <Content Include="Content\fonts\Material-Design-Icons.ttf" />
+    <Content Include="Content\fonts\Material-Design-Icons.woff" />
+    <Content Include="Content\fonts\RobotoDraftBold.woff" />
+    <Content Include="Content\fonts\RobotoDraftBold.woff2" />
+    <Content Include="Content\fonts\RobotoDraftItalic.woff" />
+    <Content Include="Content\fonts\RobotoDraftItalic.woff2" />
+    <Content Include="Content\fonts\RobotoDraftMedium.woff" />
+    <Content Include="Content\fonts\RobotoDraftMedium.woff2" />
+    <Content Include="Content\fonts\RobotoDraftRegular.woff" />
+    <Content Include="Content\fonts\RobotoDraftRegular.woff2" />
     <None Include="Scripts\jquery-1.9.1-vsdoc.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -190,6 +203,7 @@
     <Compile Include="Areas\Admin\Models\UserViewModel.cs" />
     <Compile Include="Areas\Admin\Validators\CountryViewModelValidator.cs" />
     <Compile Include="Areas\Common\CommonAreaRegistration.cs" />
+    <Compile Include="Areas\Common\Models\TourPreviewViewModel.cs" />
     <Compile Include="Areas\Payment\PaymentAreaRegistration.cs" />
     <Compile Include="Areas\Security\Controllers\AuthorizationController.cs" />
     <Compile Include="Areas\Security\Controllers\RegistrationController.cs" />
@@ -201,6 +215,7 @@
     <Compile Include="Areas\User\UserAreaRegistration.cs" />
     <Compile Include="Areas\Common\Controllers\HomeController.cs" />
     <Compile Include="Filters\CultureAttribute.cs" />
+    <Compile Include="Helpers\CardHelper.cs" />
     <Compile Include="Models\IViewModel.cs" />
     <Compile Include="Models\ViewModel.cs" />
     <Compile Include="Util\NinjectValidatorFactory.cs" />
@@ -242,19 +257,7 @@
     <Content Include="Content\bootstrap-material-styles\roboto.min.css.map" />
     <Content Include="Scripts\bootstrap-material-scripts\material.min.js.map" />
     <Content Include="Scripts\bootstrap-material-scripts\ripples.min.js.map" />
-    <Content Include="fonts\bootstrap-material-fonts\Material-Design-Icons.eot" />
-    <Content Include="fonts\bootstrap-material-fonts\Material-Design-Icons.ttf" />
-    <Content Include="fonts\bootstrap-material-fonts\Material-Design-Icons.woff" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftBold.woff" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftBold.woff2" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftItalic.woff" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftItalic.woff2" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftMedium.woff" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftMedium.woff2" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftRegular.woff" />
-    <Content Include="fonts\bootstrap-material-fonts\RobotoDraftRegular.woff2" />
     <Content Include="Areas\Admin\Views\TourManagement\AddTour.cshtml" />
-    <Content Include="Areas\Common\Views\Home\Index.cshtml" />
     <Content Include="Areas\Admin\Views\GeoManagement\AddCountry.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
