fixes-fixes-fixes

--- a/ExitTask.Infrastructure/ExitTask.Infrastructure.csproj
+++ b/ExitTask.Infrastructure/ExitTask.Infrastructure.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Migrations\201509212228146_M1.Designer.cs">
       <DependentUpon>201509212228146_M1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509222056352_M2.cs" />
+    <Compile Include="Migrations\201509222056352_M2.Designer.cs">
+      <DependentUpon>201509222056352_M2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -88,6 +92,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201509212228146_M1.resx">
       <DependentUpon>201509212228146_M1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509222056352_M2.resx">
+      <DependentUpon>201509222056352_M2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
